[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.89"
keywords = ["vkteams", "bot", "api", "chatbot", "automation", "mcp"]
categories = ["api-bindings", "command-line-utilities", "web-programming"]
description = "High-performance VK Teams Bot API toolkit with CLI and MCP server support"
readme = "README.md"
homepage = "https://github.com/bug-ops/vkteams-bot"
repository = "https://github.com/bug-ops/vkteams-bot"
documentation = "https://docs.rs/vkteams-bot"

# Optimize release profile for minimal binary size
[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Single codegen unit for better optimization
strip = true      # Strip symbols from binary
panic = "abort"   # Smaller panic handler

# Even more aggressive size optimization profile
[profile.release-min]
inherits = "release"
opt-level = "z"
lto = "fat"             # More aggressive LTO
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false # Disable overflow checks for smaller code

[workspace.dependencies]
assert_cmd = "2.0.17"
async-trait = "0.1.88"
axum = "0.8"
base64 = "0.22"
bytes = "1.6"
chrono = "0.4"
clap = "4.5"
clap_complete = "4.5"
colored = "3"
criterion = "0.7"
cron = "0.15"
crossbeam-utils = "0.8"
console = "0.16"
dashmap = "6.0"
dhat = "0.3"
dialoguer = "0.11"
dirs = "6.0"
dotenvy = "0.15"
exitcode = "1"
futures = "0.3"
http = "1.2"
indicatif = "0.18"
ollama-rs = "0.3"
once_cell = "1"
openai-api-rs = "6"
paste = "1"
pgvector = "0.4"
predicates = "3.1.3"
proptest = "1.7"
quote = "1.0"
rand = "0.9"
rayon = "1.10"
regex = "1"
reqwest = "0.12"
rmcp = "0.6"
schemars = "1"
serde = "1"
serde_json = "1"
serde_url_params = "0.2"
serial_test = "3"
syn = "2.0"
sqlx = "0.8"
tabled = "0.20"
tempfile = "3.8"
tera = "1"
testcontainers = "0.24"
testcontainers-modules = "0.12"
thiserror = "2"
tokio = "1.47"
tokio-test = "0.4.4"
tokio-util = "0.7"
toml = "0.9"
tonic = "0.14"
tonic-health = "0.14"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-subscriber = "0.3"
url = "2.5"
uuid = "1.0"
vkteams-bot = { version = "0.11", path = "crates/vkteams-bot", default-features = false }
vkteams-bot-macros = { version = "0.2", path = "crates/vkteams-bot-macros" }
which = "8.0"
