[package]
name = "vkteams-bot-cli"
version = "0.6.0"
edition = "2024"
authors = ["Andrei G. <k05h31@gmail.com>"]
description = "VK Teams Bot API CLI"
license = "MIT"
repository = "https://github.com/bug-ops/vkteams-bot/crates/vkteams-bot-cli/tree/master"
readme = "README.md"
keywords = ["vk", "teams", "bot", "cli"]
categories = [
    "asynchronous",
    "api-bindings",
    "web-programming::http-client",
    "command-line-interface",
]

[lib]
name = "vkteams_bot_cli"
path = "src/lib.rs"

[[bin]]
name = "vkteams-bot-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = [
    "derive",
    'std',
    'color',
    'usage',
    'suggestions',
    'cargo',
] }
clap_complete = { version = "4.5", optional = true }
dotenvy = "0.15"
vkteams-bot = { version = "0.9", features = ["longpoll", "otlp"] }
tracing = "0.1"
tokio = { version = "1", features = ["full", "io-util"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
# pretty_env_logger = "0.5"
serde_json = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
exitcode = "1"
futures = "0.3"
bytes = "1.4"
toml = "0.8"
dirs = "5.0"
indicatif = { version = "0.17", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

[features]
default = ["completion"]
completion = ["dep:clap_complete"]

[dev-dependencies]
serde_yaml = "0.9"
dotenvy = "0.15"
tempfile = "3.8"
tokio-test = "0.4"
