[package]
name = "vkteams-bot-macros"
version = "0.2.2"
description = "VK Teams Bot Macros"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
