[package]
name = "vkteams-bot-macros"
version = "0.2.4"
description = "VK Teams Bot Macros"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
