[package]
name = "vkteams-bot-macros"
version = "0.2.5"
description = "VK Teams Bot Macros"

edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
