[package]
name = "vkteams-bot-mcp"
version = "0.2.1"
authors = ["Andrei G. <k05h31@gmail.com>"]
keywords = ["vkteams", "bot", "api", "automation", "mcp"]
description = "High-performance VK Teams Bot API toolkit with CLI and MCP server support"
readme = "README.md"
homepage = "https://github.com/bug-ops/vkteams-bot"
repository = "https://github.com/bug-ops/vkteams-bot"
documentation = "https://docs.rs/vkteams-bot"
categories = [
    "asynchronous",
    "api-bindings",
    "web-programming::http-client",
    "web-programming::http-server",
    "network-programming",
]
readme = "README.md"

license.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "vkteams-bot-mcp"
path = "src/main.rs"

[dependencies]
thiserror = "2"
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.9"
async-trait = "0.1"
vkteams-bot = { version = "0.9", path = "../vkteams-bot", default-features = false, features = [
    "otlp",
] }
base64 = "0.22"

# Database dependencies
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
