[package]
name = "vkteams-bot-mcp"
version = "0.3.2"
authors = ["Andrei G. <k05h31@gmail.com>"]
keywords = ["vkteams", "bot", "api", "automation", "mcp"]
description = "High-performance VK Teams Bot API toolkit with CLI and MCP server support"
readme = "README.md"
homepage = "https://github.com/bug-ops/vkteams-bot"
repository = "https://github.com/bug-ops/vkteams-bot"
documentation = "https://docs.rs/vkteams-bot"
categories = [
    "asynchronous",
    "api-bindings",
    "web-programming::http-client",
    "web-programming::http-server",
    "network-programming",
]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "vkteams-bot-mcp"
path = "src/main.rs"

[dependencies]
thiserror = "2"
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# schemars = "0.9"
vkteams-bot = { version = "0.11", path = "../vkteams-bot", default-features = false, features = [
    "otlp",
] }
async-trait = "0.1.88"
base64 = "0.22"
which = "8.0"
tracing = "0.1"
regex = "1"
once_cell = "1"
dirs = "6.0"
