[package]
name = "vkteams-bot-mcp"
version = "0.3.5"
authors = ["Andrei G. <k05h31@gmail.com>"]
keywords = ["vkteams", "bot", "api", "automation", "mcp"]
description = "High-performance VK Teams Bot API toolkit with CLI and MCP server support"
readme = "README.md"
homepage = "https://github.com/bug-ops/vkteams-bot"
repository = "https://github.com/bug-ops/vkteams-bot"
documentation = "https://docs.rs/vkteams-bot"
categories = [
    "asynchronous",
    "api-bindings",
    "web-programming::http-client",
    "web-programming::http-server",
    "network-programming",
]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "vkteams-bot-mcp"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
rmcp = { version = "0.3", features = ["server", "macros", "transport-io"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
] }
vkteams-bot = { workspace = true, features = ["otlp"] }
which = { workspace = true }
