[package]
keywords = ["vkteams", "bot", "api", "automation", "mcp"]
categories = ["api-bindings", "command-line-utilities", "web-programming"]
description = "High-performance VK Teams Bot API toolkit with CLI and MCP server support"
readme = "README.md"
repository = "https://github.com/bug-ops/vkteams-bot/tree/master"
homepage = "https://github.com/bug-ops/vkteams-bot"
documentation = "https://docs.rs/vkteams-bot"
name = "vkteams-bot"
version = "0.9.9"
authors = ["Andrei G. <k05h31@gmail.com>"]
license.workspace = true
edition.workspace = true


[dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "multipart",
    "rustls-tls",
    "__tls",
] }
toml = "0.8"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower-http = { version = "0.6", features = [
    "timeout",
    "trace",
    "limit",
    "cors",
], optional = true }
tracing = "0.1"
tracing-opentelemetry = { version = "0.31", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
], optional = true }
opentelemetry = { version = "0.30", optional = true }
opentelemetry_sdk = { version = "0.30", optional = true }
opentelemetry-otlp = { version = "0.30", features = [
    "grpc-tonic",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.30", features = [
    "semconv_experimental",
], optional = true }
async-trait = { version = "0.1", optional = true }
axum = { version = "0.8", features = ["macros", "http2"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_url_params = "0.2"
serde_json = "1"
log = "0.4"
tera = { version = "1", default-features = false, optional = true }
tonic = { version = "0.13", optional = true }
tonic-health = { version = "0.13", optional = true }
http = "1.2"
paste = "1"
url = "2.5"
vkteams-bot-macros = { version = "0.2", path = "../vkteams-bot-macros" }
dashmap = "6"
rand = "0.9"

[features]
default = ["longpoll"]
full = ["webhook", "longpoll", "templates", "grpc", "otlp", "ratelimit"]
longpoll = []
webhook = ["dep:axum", "dep:tower-http", "dep:async-trait"]
templates = ["dep:tera"]
grpc = ["dep:tonic-health", "dep:tonic"]
otlp = [
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
]
ratelimit = ["dep:async-trait"]

[dev-dependencies]
vkteams-bot = { path = ".", features = ["full"] }
tonic = "0.13"
dotenvy = "0.15"
criterion = { version = "0.6", features = [
    "async",
    "async_tokio",
    "html_reports",
] }
dhat = { version = "0.3" }

[[bench]]
name = "performance"
harness = false
